--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Welcome to the Medical Data App!</title>
     <style>
@@ -48,7 +48,7 @@
 <div class="container">
     <h1>Welcome to the Medical Data App!</h1>
     <p>Manage and visualize your medical data effortlessly.</p>
-    <a href="/csv/upload">Get Started</a>
+    <a href="/login">Get Started</a>
 </div>
 </body>
 </html>
